--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@material/card": "^0.39.3",
     "@material/dialog": "^0.39.3",
     "@material/layout-grid": "^0.39.0",
+    "@material/linear-progress": "^0.39.1",
+    "apollo-boost": "^0.1.16",
+    "graphql": "^14.0.2",
     "graphql-request": "^1.8.2",
-    "node-sass-chokidar": "^1.3.3",
     "react": "^16.5.2",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
